src/test/deca/context/valid/inheritance/polumorphic_assignment_ok.deca
// Description :
// Variable de type super-classe reçoit instance de sous-classe
//
// Resultats :
// ok

class M { }
class N extends M { }
class O {
    void test() {
        M obj = new N();
    }
}
