src/test/deca/context/invalid/avecObjet/method_call_on_wrong_class_custom.deca
// Description :
// appel de méthode appartenant à une autre classe
//
// Resultats :
// Erreur contextuelle
// Ligne 11 : méthode inconnue

class F {
    void foo() {}
}

class G {
    void test() {
        foo(); // invalide
    }
}
